# tr

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: UserMakeRulesOverride.cmake
src/: CMakeLists.txt  bvh.h  camera.h  hitable.h  hitable_list.h  material.h  perlin.h  sphere.h  texture.h  tr.cc
src/math/: aabb.h  color.h  color4.h  color_format.h  detail.h  point.h  point3.h  point4.h  point_format.h  random.h  ray.h  ray_format.h  scalar.h  types.h  vec.h  vec2.h  vec3.h  vec3i.h  vec4.h  vec_format.h
src/simd/: simd.h  sse2_float128.h  sse2_int128.h
